fix(editor): Package menu — show (unsaved) before server sync arrives
The menu rendered "Loading..." indefinitely on first open because the
client waited for a server snapshot before showing any entries. Add a
synthetic unsaved placeholder so the menu is immediately useful, and
add debug logs so we can verify the sync round-trip in future repros.

- PackageListClient.entries() returns [(unsaved)] when SNAPSHOT is null
  or empty, instead of an empty list. The placeholder always claims
  isActive=true so PackageContentsScreen also has something coherent to
  render.
- activeEntry() falls back to the placeholder when no snapshot exists,
  and defensively returns the first entry when a snapshot lacks any
  active flag.
- Add LOGGER.debug calls on send / receive / handle so log inspection
  can confirm whether the round-trip completed.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>